syntax = "proto3";

package hotel.v1;

option go_package = "api/hotel/v1;hotelv1";

import "buf/validate/validate.proto";

message DeleteRoomRequest {
  string id = 4 [
    (buf.validate.field).string.uuid = true
  ];
}

message DeleteRoomResponse {
  string message = 1;
}