syntax = "proto3";

package hotel.v1;

option go_package = "api/hotel/v1;hotelv1";

import "buf/validate/validate.proto";
import "hotel/v1/models/room.proto";

message GetRoomsRequest {
  string country_code = 1 [
    (buf.validate.field).string.pattern = "^[a-z]{2}$"
  ];
  string city_slug = 2 [
    (buf.validate.field).string.pattern = "^[a-z0-9]+(-[a-z0-9]+)*$"
  ];
  string hotel_slug = 3 [
    (buf.validate.field).string.pattern = "^[a-z0-9]+(-[a-z0-9]+)*$"
  ];
  uint64 page = 4 [
    (buf.validate.field).uint64.gte = 1
  ];
  uint64 limit = 5 [
    (buf.validate.field).uint64 = {gte: 1, lte: 100}
  ];
}

message GetRoomsResponse {
  repeated RoomShort rooms = 1;
  uint64 total_count = 2;
  uint64 page = 3;
  uint64 limit = 4;
}