syntax = "proto3";

package hotel.v1;

option go_package = "api/hotel/v1;hotelv1";

import "buf/validate/validate.proto";
import "hotel/v1/models/room.proto";
import "hotel/v1/enums/room_type.proto";

message UpdateRoomRequest {
  string id = 1 [
    (buf.validate.field).string.uuid = true
  ];
  string title = 2 [
    (buf.validate.field).required = true
  ];
  string description = 3 [
    (buf.validate.field).required = true
  ];
  string room_number = 4 [
    (buf.validate.field).required = true
  ];
  RoomType type = 5 [
    (buf.validate.field).required = true
  ];
  string price = 6 [
    (buf.validate.field).required = true
  ];
  int64 capacity = 7 [
    (buf.validate.field).required = true
  ];
  float area_sqm = 8 [
    (buf.validate.field).required = true
  ];
  int64 floor = 9 [
    (buf.validate.field).required = true
  ];
  repeated string amenities = 10 [
    (buf.validate.field).required = true
  ];
  repeated string images = 11 [
    (buf.validate.field).required = true
  ];
}

message UpdateRoomResponse {
  UpdateRoom room = 1;
}