syntax = "proto3";

package hotel.v1;

option go_package = "api/hotel/v1;hotelv1";

import "buf/validate/validate.proto";
import "hotel/v1/models/room.proto";
import "hotel/v1/enums/room_status.proto";

message UpdateRoomStatusRequest {
  string id = 1 [
    (buf.validate.field).string.uuid = true
  ];
  RoomStatus status = 5 [
    (buf.validate.field).required = true
  ];
}

message UpdateRoomStatusResponse {
  RoomStatus status = 1;
}